<resources>
    <string name="app_name">CloudTorrentMaster</string>
    <string name="splash_activity_title">启动页</string>
    <string name="server_select_activity_title">服务器选择</string>
    <string name="server_connect_sync">http://%s:%d/sync</string>
    <string name="server_base_url">http://%s:%d</string>
    <string name="server_select_title">服务器选择</string>
    <string name="item_swipe_delete_text">滑动删除</string>
    <string name="server_select_delete_toast">已删除：%s</string>
    <string name="server_select_undo">撤销</string>
    <string name="server_select_input_hint_port">端口号</string>
    <string name="server_select_input_hint_ip">IP地址(0.0.0.0)</string>
    <string name="server_select_input_hint_label">服务器标签</string>
    <string name="server_select_logo_text">选择一个logo</string>
    <string name="ip_address_digits">0123456789.</string>
    <string name="input_error_empty">不能为空</string>
    <string name="input_error_label_over_limit">超出字数限制</string>
    <string name="input_error_ip_format_error">格式有误</string>
    <string name="input_error_port_over_limit">端口号范围错误(0~65535)</string>
    <string name="main_menu_download_title">下载到本地</string>
    <string name="navigation_open">侧滑菜单打开</string>
    <string name="navigation_close">侧滑菜单关闭</string>
    <string name="server_switch_message">切换至 %s(%s)，当前服务器将断开连接!</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_server_switch">切换</string>
    <string name="main_menu_navigation_setting">服务器/应用设置</string>
    <string name="add_task_sheet_add_tracker">添加Tracker</string>
    <string name="add_task_sheet_add_torrent">添加种子</string>
    <string name="add_task_sheet_tracker_item">Tracker</string>
    <string name="add_task_tracker">Tracker</string>
    <string name="add_task_hash">Hash</string>
    <string name="add_task_name">Name</string>
    <string name="add_task_sheet_not_found_torrent">文件不存在</string>
    <string name="add_task_sheet_torrent_unexists">获取不到文件目录</string>
    <string name="add_task_sheet_system_error">系统错误，请重试</string>
    <string name="add_task_sheet_replace_torrent">更换种子</string>
    <string name="add_task_magnet_loading">正在添加磁力链任务</string>
    <string name="add_task_torrent_loading">正在添加种子任务</string>
    <string name="add_task_success">任务已添加</string>
    <string name="dialog_add_task">添加到下载任务</string>
    <string name="dialog_find_magnet">发现磁力链</string>
    <string name="server_stats_preview_disk">磁盘：%s</string>
    <string name="server_stats_disk">磁盘：%s/%s(%s)</string>
    <string name="server_stats_preview_memory">内存：%s</string>
    <string name="server_stats_memory">内存：%s/%s(%s)</string>
    <string name="server_stats_cpu">CPU：%s</string>
    <string name="server_stats_users">已连接用户(%d)：</string>
    <string name="server_stats_runtime">运行时：%s</string>
    <string name="server_stats_go_memory">Go内存：%s</string>
    <string name="server_stats_go_routines">Go并发：%d</string>
    <string name="server_stats_uptime">更新时间：%s</string>
    <string name="server_stats_title">%s v%s</string>
    <string name="server_torrents_preview_title">共 %s 个任务,总进度 %s</string>
    <string name="server_torrents_title">全部任务(%s)</string>
    <string name="server_torrents_empty">任务列表为空</string>
    <string name="view_folder_file_info"><![CDATA[%s\t\t\t\t<font size=\"2\" color=\"#999999\"><small>- %s\t\t%s%%</small></font>]]></string>
</resources>