<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_add_task_add_torrent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:singleLine="true"
            android:text="@string/add_task_sheet_add_torrent"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/imageview_add_task_sheet_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/default_margin"
            android:src="@drawable/ic_sheet_close"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageview_add_task_sheet_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/default_margin"
            android:src="@drawable/ic_sheet_done"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:contentPaddingBottom="@dimen/vertical_margin"
        app:contentPaddingLeft="@dimen/horizontal_margin"
        app:contentPaddingRight="@dimen/horizontal_margin"
        app:contentPaddingTop="@dimen/vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_add_task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    app:errorEnabled="true"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputedittext_add_task_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_task_name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="@dimen/text_size_normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageview_add_task_name_paste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="@dimen/default_margin"
                    android:src="@drawable/ic_add_task_paste"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_add_task_hash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputedittext_add_task_hash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_task_hash"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="@dimen/text_size_normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageview_add_task_hash_paste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="@dimen/default_margin"
                    android:src="@drawable/ic_add_task_paste"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout_add_task_tracker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textinputedittext_add_task_tracker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_task_tracker"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="@dimen/text_size_normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imageview_add_task_tracker_paste"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?selectableItemBackgroundBorderless"
                    android:padding="@dimen/default_margin"
                    android:src="@drawable/ic_add_task_paste"
                    tools:ignore="ContentDescription" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearlayout_add_task_trackers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/textview_add_task_add_tracker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="@dimen/horizontal_margin"
                android:paddingTop="@dimen/vertical_margin"
                android:paddingRight="@dimen/horizontal_margin"
                android:paddingBottom="@dimen/vertical_margin"
                android:text="@string/add_task_sheet_add_tracker"
                android:textColor="?colorAccent"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>